--- a/OdbcJdbc.rc
+++ b/OdbcJdbc.rc
@@ -79,7 +79,7 @@ STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Firebird ODBC Connect"
 FONT 8, "MS Sans Serif"
 BEGIN
-    EDITTEXT        IDC_USER,60,10,70,12,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        IDC_USER,60,10,70,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_PASSWORD,60,25,70,12,ES_PASSWORD | ES_AUTOHSCROLL
     EDITTEXT        IDC_ROLE,60,40,70,12,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,16,64,50,14
